Fix DaniSearch text and spacing, Fix social div spacing, maybe

--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,7 @@ img {
 }
 
 #DaniSearch p {
-    margin: 0 0 62px 0;
+    text-align: center;
 }
 
 
@@ -144,6 +144,7 @@ footer {
 
 footer p {
     max-width: 100%;
+    font-size: 20px;
 }
 
 #Social {
